tests/invalid/invalid-023.inox
== SPDX-License-Identifier: MPL-2.0
== Copyright © 2026 Marcelo Fortes and Inox contributors. All rights reserved.
==
== This Source Code Form is subject to the terms of the Mozilla Public
== License, v. 2.0. If a copy of the MPL was not distributed with this
== file, You can obtain one at https://mozilla.org/MPL/2.0/.

Module Invalid023

Sum(A Integer, B Integer) Integer :
    Return A + B
;

Main :
    Sum(1, "abc")
;
